2014-05-29  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWDatabase/WODisplayGroup.m
	  respect GNUstep coding standard (curly brackets placement, indentation)
	  fix _deleteObject: (undo selectors)
	  fix _insertObjectWithObjectAndIndex: (NSAssert)
	  fix insertObject:atIndex: (undo selectors)
2014-05-22  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb/GSWAssociation.h
	  replace logTakeValue: by _logPullValue:inComponent:
	  replace logSetValue: by logPushValue:inComponent:
	* GSWeb/GSWAssociation.m
	  replace logTakeValue: by _logPullValue:inComponent:
	  replace logSetValue: by logPushValue:inComponent:
	  respect GNUstep coding standard (curly brackets placement, etc.)
	  implement -debugDescription
	* GSWeb/GSWConstantValueAssociation.m
	  replace logTakeValue: by _logPullValue:inComponent:
	  replace logSetValue: by logPushValue:inComponent:
	  fix -debugDescription
	* GSWeb/GSWKeyValueAssociation.m
	  replace logTakeValue: by _logPullValue:inComponent:
	  replace logSetValue: by logPushValue:inComponent:
	  simplify -description
	* GSWeb/GSWKeyValueAssociation.h
	  remove unneedded declarations
	* GSWeb/GSWConstantValueAssociation.m
	  remove unneedded declarations
2014-05-22  Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb/GSWUtils.m
	  fix rangeOfData:range:
	* GSWExtensions/GSWCollapsibleComponentContent.gswc/GSWCollapsibleComponentContent.gswd
	  set framework binding
	* GSWExtensions/GSWCollapsibleComponentContent.[hm]
	  handle framework binding
	* GSWExtensions/GSWPageRestorationErrorPage.gswc/GSWPageRestorationErrorPage.gswd
	  set framework binding
	* GSWExtensions/GSWSessionCreationErrorPage.gswc/GSWSessionCreationErrorPage.gswd
	  set framework binding
	* GSWExtensions/GSWSessionRestorationErrorPage.gswc/GSWSessionRestorationErrorPage.gswd
	  set framework binding
	* GSWeb/GSWApplication.[hm]
	  add -frameworkNameGSWExtensions
	* GSWeb/GSWPasswordField.m
	  respect GNUstep coding standard (curly brackets placement, etc.)